kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffeeshop
  labels:
    name: coffeeshop
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
